--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+                <dependency>
+                        <groupId>org.flywaydb</groupId>
+                        <artifactId>flyway-core</artifactId>
+                </dependency>
+                <dependency>
+                        <groupId>com.jayway.restassured</groupId>
+                        <artifactId>rest-assured</artifactId>
+                        <version>2.9.0</version>
+                </dependency>
+
 	</dependencies>
 	
 	<build>
