--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/belajar_continuous_integration
-spring.datasource.username=belajar
-spring.datasource.password=java
+spring.datasource.username=root
+spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
